@@ -5,3 +5,4 @@
 - npm install from npmjs.org registry
 - in resource.json files, references should be wrapped with url(path) if inlining is needed. external references 
 	can be used directly e.g. image: "http://etc"
+- f5.Picture widget now requires that the associated element is an img (rather than nesting an img below)
